--- a/brendacarpinteria/Ver facturas.xaml
+++ b/brendacarpinteria/Ver facturas.xaml
@@ -46,8 +46,9 @@
         <Label Grid.ColumnSpan="2" Content="Detalle de la factura" Margin="10" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="4"/>
         <Label Content="ID de factura selecionada:" HorizontalAlignment="Right" Margin="10" VerticalAlignment="Top" Grid.Row="2"/>
         <TextBox x:Name="txtidfactura" Margin="10" TextWrapping="Wrap" Text="" VerticalAlignment="Center" TextChanged="Txtidfactura_TextChanged" IsEnabled="False" Grid.Row="2" Grid.Column="1" Height="20"/>
-        <Button Content="Refrescar facturas" HorizontalAlignment="Right" Margin="10" Height="30" VerticalAlignment="Top" Width="100" Click="Button_Click_1" Grid.Column="3" Grid.Row="1"/>
+        <Button Content="Refrescar facturas" HorizontalAlignment="Right" Margin="10" Height="30" VerticalAlignment="Top" Width="100" Click="Button_Click_1" Grid.Column="3" Grid.Row="1" Background="#FFFF7500"/>
         <Label Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10"  Content="Palabra a buscar:"/>
+        <Button Content="Imprimir factura" HorizontalAlignment="Right" Margin="0,10,10,0" Height="30" VerticalAlignment="Top" Width="100" Grid.Column="3" Grid.Row="2" Background="#FFFF7500"/>
 
     </Grid>
 </Window>
