--- a/brendacarpinteria/productos.xaml
+++ b/brendacarpinteria/productos.xaml
@@ -7,7 +7,7 @@
         xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="productos" Height="500" Width="900" Icon="/martillo.png">
+        Title="productos" Height="500" Width="900" Icon="/martillo.png" Loaded="Window_Loaded">
     <Window.Resources>
         <local:Carpinteria_BDDataSet x:Key="carpinteria_BDDataSet"/>
         <CollectionViewSource x:Key="productosViewSource" Source="{Binding productos, Source={StaticResource carpinteria_BDDataSet}}"/>
@@ -65,6 +65,11 @@
         <Button x:Name="btnregresar" Content="" HorizontalAlignment="Left" Margin="832,3,0,0" VerticalAlignment="Top" Width="44" Height="34" RenderTransformOrigin="0.763,0.552" BorderBrush="#FFFF6900" Foreground="White" Click="btnregresar_Click">
             <Button.Background>
                 <ImageBrush ImageSource="/flecha-hacia-atras.png"/>
+            </Button.Background>
+        </Button>
+        <Button x:Name="btncerrar" Content="" HorizontalAlignment="Left" Margin="832,3,0,0" VerticalAlignment="Top" Width="44" Height="34" RenderTransformOrigin="0.763,0.552" BorderBrush="#FFFF6900" Foreground="White" Click="btncancelar_Click" Visibility="Hidden">
+            <Button.Background>
+                <ImageBrush ImageSource="/Imagenes/cancelar.png"/>
             </Button.Background>
         </Button>
         <Label x:Name="tpu" Content="" HorizontalAlignment="Left" Margin="105,45,0,0" VerticalAlignment="Top"/>
